syntax = "proto3";
package lavanet.lava.conflict;

import "gogoproto/gogo.proto";
import "lavanet/lava/conflict/params.proto";
import "lavanet/lava/conflict/conflict_vote.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/lavanet/lava/v4/x/conflict/types";

// GenesisState defines the conflict module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated ConflictVote conflictVoteList = 2 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
